# booksy

./: README.md  pyproject.toml
src/booksy_watch/: __main__.py  booksy.py  config.py  i18n.py  notify.py  tui.py  watcher.py  wizard.py
