[project]
name = "booksy-watch"
version = "0.1.0"
description = "Watch a Booksy salon for earlier appointment slots."
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "textual>=0.80",
    "tomli-w>=1.0",
    "rich>=13.7",
]

[project.scripts]
booksy-watch = "booksy_watch.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/booksy_watch"]
